--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>01</title>
+    <title>hello</title>
 </head>
 
 <body>
@@ -12,7 +12,6 @@
     <br> 註&nbsp;&nbsp;解&nbsp;&nbsp;此&nbsp;&nbsp;行
     <br> 窈&nbsp;&nbsp;窕&nbsp;&nbsp;淑&nbsp;&nbsp;女
     <br> 君&nbsp;&nbsp;子&nbsp;&nbsp;好&nbsp;&nbsp;逑
-    <br>
     <br>
     <br> 詩．周南．關睢
     <hr>
@@ -23,40 +22,40 @@
     <br> 「再見了！」狐狸說。
     <br>
     <br>
-    <blockquote>「我的秘密很簡單：唯有心才能看得清楚，眼睛是看不到真正重要的東西的。」</blockquote>
+    <blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的</strong>。」</blockquote>
     <br> 小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」
     <hr>
-    <a href="https://emmalin529.github.io/hw01/" (target="_blank" )>go to hw1</a>
+    <a href="https://emmalin529.github.io/hw0001/" (target="_blank" )>go to hw1</a>
     <hr>
     <table border="1">
         <tr>
-        <td colspan="2">一起看看小王子留給我們與人生的六個關係練習</td>
-        <tr>
+            <td colspan="2">一起看看小王子留給我們與人生的六個關係練習</td>
+            <tr>
                 <td rowspan="2">與自己的關係</td>
                 <td>每個人都有自己的孤單課題</td>
-        </tr>
-        <tr>
+            </tr>
+            <tr>
                 <td>你不需要變成你不喜歡的大人</td>
-        </tr>
-        <tr>
+            </tr>
+            <tr>
                 <td rowspan="2">與愛人的關係</td>
                 <td>從心甘情願豢養與被豢養開始</td>
-        </tr>
-        <tr>
+            </tr>
+            <tr>
                 <td>因為他是你的玫瑰</td>
-        </tr>
-        <tr>
+            </tr>
+            <tr>
                 <td rowspan="2">與世界的關係</td>
                 <td>用「心」去尋覓你笑著的理由</td>
-        </tr>
-        <tr>
+            </tr>
+            <tr>
                 <td>分離的時候，學會道別</td>
-        </tr>
+            </tr>
     </table>
 
     <hr>
-    <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" target="_new"></a>
-    <img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" width=700</a>
+    <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" target="_new">
+        <img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" width=700></a>
 </body>
 
 </html>
