--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <hr>
     <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" target="_new">
-        <img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" width=700></a>
+        <img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif"></a>
 </body>
 
 </html>
