--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr>
     <table border="1">
         <tr>
-            <td colspan="2">一起看看小王子留給我們與人生的六個關係練習</td>
+            <td colspan="2">小王子留給我們與人生的六個關係練習</td>
             <tr>
                 <td rowspan="2">與自己的關係</td>
                 <td>每個人都有自己的孤單課題</td>
