--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
     <br>
     <br> 詩．周南．關睢
     <hr>
-    <h1>小王子</h1> 然後他又回到狐狸那裡。
-    <br>
-    <br> 「再見了！」小王子說。
-    <br>
-    <br> 「再見了！」狐狸說。
-    <br>
-    <br>
+    <h1>小王子</h1> 
+    <p>然後他又回到狐狸那裡。</p>
+    <p>「再見了！」小王子說。</p>
+    <p>再見了！」狐狸說。</p>
     <blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的</strong>。」</blockquote>
-    <br> 小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」
+    <p> 小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
     <hr>
     <a href="https://emmalin529.github.io/hw0001/" (target="_blank" )>go to hw1</a>
     <hr>
@@ -55,7 +52,7 @@
 
     <hr>
     <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" target="_new">
-        <img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif"></a>
+        <img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" width="500"></a>
 </body>
 
 </html>
