--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的</strong>。」</blockquote>
     <p> 小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
     <hr>
-    <a href="https://emmalin529.github.io/hw0001/" (target="_blank" )>go to hw1</a>
+    <a href="https://emmalin529.github.io/hw0001/" (target="_blank" )>go to hw0001</a>
     <hr>
     <table border="1">
         <tr>
@@ -53,6 +53,10 @@
     <hr>
     <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" target="_new">
         <img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" width="600"></a>
+    
+    <hr> 
+    <br>   
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.4315338313145!2d121.53947470058326!3d25.019425283900492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442aa266982a61d%3A0x73054453d07310fe!2zMTA25Y-w5YyX5biC5aSn5a6J5Y2A6LOH6KiK5bel56iL6aSoICjlvrfnlLDppKgp!5e0!3m2!1szh-TW!2stw!4v1480254795080" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 
 </html>
