--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>hello</title>
 </head>
-
+<link rel="stylesheet"type="text/css" href="main.css">
 <body>
     關&nbsp;&nbsp;關&nbsp;&nbsp;雎&nbsp;&nbsp;鳩
     <br> 在&nbsp;&nbsp;河&nbsp;&nbsp;之&nbsp;&nbsp;洲
