--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>「再見了！」小王子說。</p>
     <p>「再見了！」狐狸說。</p>
     <blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的</strong>。」</blockquote>
-    <p> 小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
+    <p> 小王子複述一遍：<br>「真正的東西不是用眼睛可以看得到的。」</p>
     <hr>
     <a href="https://emmalin529.github.io/hw0001/" (target="_blank" )>go to hw0001</a>
     <hr>
